Update 'dotnet-github-28325' component image to: quay.io/jsmid/rhtap-qe-jsmid:93066bd6d08bab664b4b568abdeb1d9bced76a54@sha256:8c42db123496d37d1d8c03b243d399b556dc80199ed5cc5afa1726cd98decf8d

--- a/components/dotnet-github-28325/overlays/development/deployment-patch.yaml
+++ b/components/dotnet-github-28325/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: dotnet-github-28325
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/jsmid/rhtap-qe-jsmid:93066bd6d08bab664b4b568abdeb1d9bced76a54@sha256:8c42db123496d37d1d8c03b243d399b556dc80199ed5cc5afa1726cd98decf8d
+          name: container-image
